Fix Linter errors

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 
     <section class="first-content d-flex flex-column align-items-center">
         <div class="content-img">
-        <img src="../first-capstone-project/images/first-content.png" alt="about image">
+        <img src="./images/first-content.png" alt="about image">
         </div>
         
         <div class="detail-desc mt-5 ">
