Fix webhint error

--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
     </div>
 </div>
 <div class="down-footer d-flex justify-content-center h-5">
-    <img src="./images/logo.png">
+    <img src="./images/logo.png" alt="Logo of wlit">
     <h4>2021 WLIT Hackathon Some Rights Reserved</h4>
 </div>
 </footer>  
